# robot_bringup

./: ARCHITECTURE.md  README.md  package.xml  setup.cfg  setup.py
launch/: bringup.launch.py  foxglove.launch.py  hardware_bringup.launch.py  microros_agent.launch.py
packaging/systemd/: microros-agent.service.template
scripts/: install_microros_agent.sh  run_microros_agent.sh
