<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_bringup</name>
  <version>0.1.0</version>
  <description>Bringup / orchestration for my_steel robot (controllers, optional micro-ROS agent).</description>
  <maintainer email="30201929+goldjunge91@users.noreply.github.com">marco</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>nav2_common</exec_depend>
  <exec_depend>robot_controller</exec_depend>
  <exec_depend>robot_description</exec_depend>
  <exec_depend>robot_hardware_interfaces</exec_depend>

  <!-- Optional micro-ROS -->
  <exec_depend>micro_ros_agent</exec_depend>
  
  <!-- Foxglove Bridge -->
  <exec_depend>foxglove_bridge</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
